modified:   shopex-backend/pom.xml 	modified:   shopex-backend/src/main/java/com/shoplex/shopex_backend/Controller/AdminController.java 	modified:   shopex-backend/src/main/java/com/shoplex/shopex_backend/Controller/AuthController.java 	modified:   shopex-backend/src/main/java/com/shoplex/shopex_backend/Controller/CustomerController.java 	modified:   shopex-backend/src/main/java/com/shoplex/shopex_backend/Controller/DeliveryController.java 	modified:   shopex-backend/src/main/java/com/shoplex/shopex_backend/Entities/Order.java 	modified:   shopex-backend/src/main/java/com/shoplex/shopex_backend/Repositories/UserRepository.java 	modified:   shopex-backend/src/main/java/com/shoplex/shopex_backend/Service/CustomerService.java 	modified:   shopex-backend/src/main/java/com/shoplex/shopex_backend/Service/DeliveryService.java 	modified:   shopex-backend/src/main/java/com/shoplex/shopex_backend/Util/JwtUtil.java 	modified:   shopex-backend/src/main/resources/application.properties 	modified:   shoplex-frontend/package-lock.json 	modified:   shoplex-frontend/package.json 	modified:   shoplex-frontend/src/App.jsx 	modified:   shoplex-frontend/src/Home.jsx 	modified:   shoplex-frontend/src/app/store.js 	modified:   shoplex-frontend/src/components/Account.jsx 	modified:   shoplex-frontend/src/components/Product.jsx 	modified:   shoplex-frontend/src/components/SideBar.jsx 	deleted:    shoplex-frontend/src/context/ToastContext.jsx 	modified:   shoplex-frontend/src/delivery/Main.jsx 	new file:   shoplex-frontend/src/feature/product/productSlice.js 	modified:   shoplex-frontend/src/vendor/LogIn.jsx 	modified:   shoplex-frontend/src/vendor/Main.jsx